--- a/src/index.scss
+++ b/src/index.scss
@@ -8,9 +8,16 @@
 }
 
 body {
+  background: #03001e;
+  background: -webkit-linear-gradient(to bottom, #fdeff9, #ec38bc, #7303c0, #03001e);
+  background: linear-gradient(to bottom, #fdeff9, #ec38bc, #7303c0, #03001e);
+
   &.dark {
-    background-color: rgb(28, 28, 30);
+    // background: rgb(28, 28, 30);
     color: white;
+    background: #03001e;
+    background: -webkit-linear-gradient(to top, #fdeff9, #ec38bc, #7303c0, #03001e);
+    background: linear-gradient(to top, #fdeff9, #ec38bc, #7303c0, #03001e);
   }
 }
 
@@ -21,19 +28,32 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 
-  .dark {
-    background-color: rgb(28, 28, 30);
+  &.dark {
+    .todoList {
+      background: #140136;
+    }
+
+    .addTodo {
+      input {
+        color: white;
+      }
+    }
   }
 
   .navbar {
     width: 100%;
-    height: 50px;
+    height: 70px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     font-family: 'Bebas Neue';
+
+    h1 {
+      font-size: 40px;
+    }
   }
 
   p {
@@ -41,6 +61,93 @@ body {
     text-align: center;
     font-size: 24px;
     font-family: 'Raleway';
+  }
+
+  .addTodo {
+    width: 100vw;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: end;
+    padding: 20px;
+
+    input {
+      width: 55%;
+      height: 40px;
+      border: 2px solid white;
+      outline: none;
+      border-radius: 50px;
+      // margin: 0 20px;
+      font-size: 20px;
+      padding: 20px 15px;
+      background: transparent;
+    }
+
+    button {
+      width: 25%;
+      height: 42px;
+      background: #bdfff9;
+      border: 2px solid #bdfff9;
+      border-radius: 50px;
+      outline: none;
+      cursor: pointer;
+      font-size: 18px;
+      font-weight: 600;
+      // color: white;
+      font-family: 'Raleway';
+      transition: all 0.3s ease;
+
+      &:hover {
+        transform: scale(1.08);
+      }
+    }
+  }
+
+  .todoList {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background: white;
+    border-radius: 50px 50px 0 0;
+    height: 70vh;
+    padding: 20px 0;
+
+    .todoItem {
+      height: 40px;
+      margin: 5px;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      .title {
+        font-size: 24px;
+        font-weight: 400;
+        margin: 5px 10px;
+        font-family: 'Raleway';
+      }
+
+      .completing {
+        margin: 5px;
+        width: 20px;
+        height: 20px;
+      }
+
+      .closeBtn {
+        background: transparent;
+        border: none;
+        outline: none;
+        user-select: none;
+        margin: 5px;
+        color: red;
+        font-size: 20px;
+      }
+    }
   }
 }
 
