--- a/src/index.scss
+++ b/src/index.scss
@@ -81,7 +81,7 @@ body {
       border: 2px solid white;
       outline: none;
       border-radius: 50px;
-      margin: auto;
+      margin: 0 15px;
       font-size: 20px;
       padding: 20px 15px;
       background: transparent;
