--- a/src/index.scss
+++ b/src/index.scss
@@ -154,6 +154,130 @@ body {
   }
 }
 
+.notification {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  display: flex;
+  width: 300px;
+  height: 100px;
+  background: #03001e;
+  flex-direction: column;
+  justify-content: space-between;
+  opacity: 0;
+
+  &.active {
+    opacity: 1;
+    animation: blockAppear 1s;
+
+    &:hover {
+      .timeline {
+        animation-play-state: paused;
+      }
+    }
+
+    .timeline {
+      animation: timeLine 5s linear;
+      animation-play-state: running;
+    }
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 30px;
+    color: white;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid white;
+
+    &.success {
+      // background: lightgreen;
+      .type {
+        color: lightgreen;
+      }
+    }
+
+    &.warning {
+      // background: lightyellow;
+      .type {
+        color: lightyellow;
+      }
+    }
+
+    &.danger {
+      // background: lightcoral;
+      .type {
+        color: lightcoral;
+      }
+    }
+
+    .type {
+      font-size: 20px;
+    }
+
+    .closeBtn {
+      cursor: pointer;
+      width: 20px;
+      height: 20px;
+      background: transparent;
+      outline: none;
+      border: none;
+      color: white;
+    }
+  }
+
+  .mainInfo {
+    display: flex;
+    height: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    padding: 10px;
+  }
+
+  .timeline {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    background: linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);
+    // animation: timeLine 5s linear;
+  }
+}
+
+@keyframes blockAppear {
+  0% {
+    transform: translateX(500px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes blockOut {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(500px);
+  }
+}
+
+@keyframes timeLine {
+  0% {
+    width: 100%;
+  }
+
+  100% {
+    width: 0%;
+  }
+}
+
 .switch {
   position: relative;
   display: inline-block;
