--- a/src/index.scss
+++ b/src/index.scss
@@ -66,6 +66,7 @@ body {
   .addTodo {
     width: 100vw;
     height: 30vh;
+    min-height: 30vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -117,7 +118,6 @@ body {
     align-items: center;
     background: white;
     border-radius: 50px 50px 0 0;
-    height: 70vh;
     padding: 20px 0;
 
     .todoItem {
