--- a/src/index.scss
+++ b/src/index.scss
@@ -103,10 +103,22 @@ body {
       font-family: 'Raleway';
       transition: all 0.3s ease;
       padding: 0 5px;
+      margin: 5px;
 
       &:hover {
         transform: scale(1.08);
       }
+    }
+
+    .sort {
+      width: 30px;
+      height: 30px;
+      padding: 5px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 5px;
     }
   }
 
@@ -119,6 +131,7 @@ body {
     background: white;
     border-radius: 50px 50px 0 0;
     padding: 20px 0;
+    min-height: 70vh;
 
     .todoItem {
       height: 40px;
@@ -149,6 +162,7 @@ body {
         margin: 5px;
         color: red;
         font-size: 20px;
+        cursor: pointer;
       }
     }
   }
